docs/semantic-ontology/linkml/tests/invalid/policies-literal.jsonld
{
    "@context": {
        "dcs": "https://w3id.org/facis/dcs/ontology/v1#"
    },
    "@id": "did:web:localhost:template:test-policies-literal",
    "@type": "dcs:ContractTemplate",
    "dcs:policies": "some-policy-string"
}
